fix collapsed sidebar

--- a/Alize.Platform.Client/src/app/components/navigation-components/side-bar/option-menu-list/option-menu-list.component.scss
+++ b/Alize.Platform.Client/src/app/components/navigation-components/side-bar/option-menu-list/option-menu-list.component.scss
@@ -43,8 +43,6 @@
 
 .mat-list-collapsed {
     width: max-content;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     margin: 0 auto;
 
@@ -52,6 +50,7 @@
         max-height: fit-content;
         margin: 5px auto;
         width: 100%;
+        
         // justify-content: center;
         align-items: center;
         // text-align: center;
